--- a/fintech-examples/fintech-impl/pom.xml
+++ b/fintech-examples/fintech-impl/pom.xml
@@ -32,39 +32,13 @@
             <version>${io.swagger.annotations.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.ws.rs</groupId>
-            <artifactId>javax.ws.rs-api</artifactId>
-            <version>${javax.ws.rs-api.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.core</groupId>
-            <artifactId>jersey-client</artifactId>
-            <version>${glassfish.jersey-client.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.media</groupId>
-            <artifactId>jersey-media-json-jackson</artifactId>
-            <version>${glassfish.jersey-client.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.media</groupId>
-            <artifactId>jersey-media-multipart</artifactId>
-            <version>${glassfish.jersey-client.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>${fasterxml-data-format.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.inject</groupId>
-            <artifactId>jersey-hk2</artifactId>
-            <version>${jersey-hk2.version}</version>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>2.2.1.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
-            <version>${spring-boot.version}</version>
         </dependency>
 
 
@@ -83,7 +57,7 @@
                         </goals>
                         <configuration>
                             <inputSpec>${banksearch-file-location}</inputSpec>
-                            <language>java</language>
+                            <language>spring</language>
                             <output>${project.build.directory}/generated-sources/open-api/</output>
                             <generateApiTests>false</generateApiTests>
                             <generateModelTests>false</generateModelTests>
@@ -97,11 +71,12 @@
                                 <interfaceOnly>true</interfaceOnly>
                                 <skipOverwrite>true</skipOverwrite>
                                 <dateLibrary>java8</dateLibrary>
-                                <java8>true</java8>
-                                <implicitHeaders>false</implicitHeaders>
-                                <delegatePattern>true</delegatePattern>
+                                <java8>false</java8>
                                 <useTags>true</useTags>
-                                <library>jersey2</library>
+                                <defaultInterfaces>false</defaultInterfaces>
+                                <implicitHeaders>false</implicitHeaders>
+                                <generateForOpenFeign>true</generateForOpenFeign>
+                                <library>spring-cloud</library>
                                 <swaggerDocketConfig>false</swaggerDocketConfig>
                             </configOptions>
                         </configuration>
