--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
         <bouncycastle.version>1.64</bouncycastle.version>
         <liquibase.version>3.8.0</liquibase.version>
         <mapstruct.version>1.3.1.Final</mapstruct.version>
+        <hibernate.version>5.4.9.Final</hibernate.version> <!-- Currently only for bytecode enhancer plugin, can't inherit Spring BOM -->
 
         <!-- Flowable BPMN -->
         <flowable.version>6.4.2</flowable.version>
