--- a/opba-consent-rest-api/pom.xml
+++ b/opba-consent-rest-api/pom.xml
@@ -97,6 +97,8 @@
                 <generateSupportingFiles>false</generateSupportingFiles>
                 <generateApiTests>false</generateApiTests>
                 <generateModelTests>false</generateModelTests>
+                <async>true</async>
+                <responseWrapper>java.util.concurrent.CompletableFuture</responseWrapper>
               </configOptions>
             </configuration>
           </execution>
