--- a/opba-facade-protocol-api-shared/pom.xml
+++ b/opba-facade-protocol-api-shared/pom.xml
@@ -28,5 +28,10 @@
             <artifactId>opba-banking-rest-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>opba-consent-rest-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
