fintech-ui: implement openapi generator to generate api from fintech_api.yml

--- a/fintech-examples/fintech-ui/angular.json
+++ b/fintech-examples/fintech-ui/angular.json
@@ -93,7 +93,7 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": ["tsconfig.app.json", "tsconfig.spec.json", "e2e/tsconfig.json"],
-            "exclude": ["**/node_modules/**"]
+            "exclude": ["**/node_modules/**", "**/api/**"]
           }
         },
         "e2e": {
