--- a/fintech-examples/fintech-impl/pom.xml
+++ b/fintech-examples/fintech-impl/pom.xml
@@ -27,6 +27,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${mapstruct.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>de.adorsys.opba</groupId>
             <artifactId>fintech-api</artifactId>
             <version>${project.version}</version>
