--- a/opba-banking-rest-impl/pom.xml
+++ b/opba-banking-rest-impl/pom.xml
@@ -22,6 +22,8 @@
             <artifactId>opba-banking-rest-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <!-- impl -->
         <dependency>
             <groupId>de.adorsys.opba</groupId>
             <artifactId>opba-db</artifactId>
@@ -30,6 +32,11 @@
         <dependency>
             <groupId>de.adorsys.opba</groupId>
             <artifactId>opba-banking-protocol-facade</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>opba-rest-api-shared</artifactId>
             <version>${project.version}</version>
         </dependency>
 
