--- a/opba-consent-rest-impl/pom.xml
+++ b/opba-consent-rest-impl/pom.xml
@@ -26,6 +26,8 @@
             <artifactId>opba-consent-rest-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <!-- impl -->
         <dependency>
             <groupId>de.adorsys.opba</groupId>
             <artifactId>opba-db</artifactId>
@@ -34,6 +36,11 @@
         <dependency>
             <groupId>de.adorsys.opba</groupId>
             <artifactId>opba-banking-protocol-facade</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>opba-rest-api-shared</artifactId>
             <version>${project.version}</version>
         </dependency>
 
