--- a/technical-embedded-ui/tpp-ui/package.json
+++ b/technical-embedded-ui/tpp-ui/package.json
@@ -29,7 +29,7 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.21",
+    "@angular-devkit/build-angular": "^0.803.24",
     "@angular/cli": "^8.3.21",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
