--- a/fintech-examples/fintech-ui/package.json
+++ b/fintech-examples/fintech-ui/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "openapi-gen": "openapi-generator generate -g typescript-angular -o src/app/api -i ../fintech-api/src/main/resources/static/fintech_api.yml",
     "start": "ng serve --proxy-config=proxy.conf.json",
+    "start:dev": "ng serve --proxy-config=proxy-dev.conf.json",
     "start:docker": "ng serve --proxy-config=proxy-docker.conf.json",
     "build": "ng build",
     "build:prod": "ng build --prod",
