--- a/technical-embedded-ui/tpp-ui/package.json
+++ b/technical-embedded-ui/tpp-ui/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 5500",
+    "start": "ng serve --port 5500 --proxy-config proxy-conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
