OBG 213 switch for mock

--- a/fintech-examples/fintech-server/src/main/resources/application.yml
+++ b/fintech-examples/fintech-server/src/main/resources/application.yml
@@ -9,6 +9,12 @@ server:
 tpp:
     url: http://localhost:18085
 
+real:
+  tpp:
+    ais:
+      transactions: false
+      accounts: false
+
 spring:
   datasource:
     url: jdbc:h2:mem:test
