--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,33 +34,36 @@ services:
     networks:
       - opba-net
 
-#  fintech-ui:
-#    environment:
-#      - BACKEND_URL=http://fintech-server:8086
-#    restart: on-failure
-#    build:
-#      context: fintech-examples/fintech-ui
-#      dockerfile: Dockerfile
-#    ports:
-#      - "14200:4200"
-#    networks:
-#      - opba-net
-#
-#  fintech-server:
-#    environment:
-#      - TPP_URL=http://open-banking-gateway:8085
-#      - SPRING_DATASOURCE_URL=jdbc:h2:mem:test
-#      - SPRING_DATASOURCE_USERNAME=SA
-#      - SPRING_DATASOURCE_PASSWORD=
-#      - SPRING_DATASOURCE_DRIVER-CLASS-NAME=org.h2.Driver
-#      - SERVER_SERVLET_SESSION_COOKIE_SECURE=false
-#      - SERVER_SERVLET_SESSION_COOKIE_MAXAGE=200
-#      - SERVER_SERVLET_SESSION_COOKIE_HTTPONLY=false
-#      - SERVER_SERVLET_SESSION_COOKIE_PATH=/
-#    build: fintech-examples/fintech-server
-#    ports:
-#      - "18086:8086"
-#    entrypoint: "/bin/sh -c 'java -jar fintech-server-*.jar'"
-#    networks:
-#      - opba-net
+  fintech-ui:
+    environment:
+      - BACKEND_URL=http://fintech-server:8086
+    restart: on-failure
+    build:
+      context: fintech-examples/fintech-ui
+      dockerfile: Dockerfile
+    ports:
+      - "14200:4200"
+    networks:
+      - opba-net
+
+  fintech-server:
+    environment:
+      - TPP_URL=http://open-banking-gateway:8085
+      - SPRING_DATASOURCE_URL=jdbc:h2:mem:test
+      - SPRING_DATASOURCE_USERNAME=SA
+      - SPRING_DATASOURCE_PASSWORD=
+      - SPRING_DATASOURCE_DRIVER-CLASS-NAME=org.h2.Driver
+      - SERVER_SERVLET_SESSION_COOKIE_SECURE=false
+      - SERVER_SERVLET_SESSION_COOKIE_MAXAGE=200
+      - SERVER_SERVLET_SESSION_COOKIE_HTTPONLY=false
+      - SERVER_SERVLET_SESSION_COOKIE_PATH=/
+      - MOCK_TPPAIS_LISTTRANSACTIONS=true
+      - MOCK_TPPAIS_LISTACCOUNTS=true
+
+    build: fintech-examples/fintech-server
+    ports:
+      - "18086:8086"
+    entrypoint: "/bin/sh -c 'java -jar fintech-server-*.jar'"
+    networks:
+      - opba-net
 
