--- a/opba-banking-rest-api/src/main/resources/static/tpp_banking_api_ais.yml
+++ b/opba-banking-rest-api/src/main/resources/static/tpp_banking_api_ais.yml
@@ -36,6 +36,7 @@ paths:
         - $ref: "#/components/parameters/Fintech-Redirect-URL-OK"
         - $ref: "#/components/parameters/Fintech-Redirect-URL-NOK"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/PSU-Consent-Session"
+        - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Service-Session-ID"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/X-Request-ID"
       security:
         - BearerAuthOAuth: []
@@ -68,6 +69,7 @@ paths:
         - $ref: "#/components/parameters/Fintech-Redirect-URL-OK"
         - $ref: "#/components/parameters/Fintech-Redirect-URL-NOK"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/PSU-Consent-Session"
+        - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Service-Session-ID"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/X-Request-ID"
         #query
         - $ref: "#/components/parameters/dateFrom"
