--- a/opba-banking-rest-api/src/main/resources/static/tpp_banking_api_commons.yml
+++ b/opba-banking-rest-api/src/main/resources/static/tpp_banking_api_commons.yml
@@ -67,6 +67,17 @@ components:
       schema:
         type: string
 
+    Service-Session-ID:
+      name: Service-Session-ID
+      in: header
+      required: false
+      description: |
+        Unique ID that identifies service session. Can be used for batch processing to correlate input and output.
+      example: "99391c7e-ad88-49ec-a2ad-99ddcb1f7721"
+      schema:
+        type: string
+        format: uuid
+
     X-Request-ID:
       name: X-Request-ID
       in: header
