--- a/technical-embedded-ui/tpp-ui/angular.json
+++ b/technical-embedded-ui/tpp-ui/angular.json
@@ -64,7 +64,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "tpp-ui:build"
+            "browserTarget": "tpp-ui:build",
+            "proxyConfig": "proxy-conf.js"
           },
           "configurations": {
             "production": {
