OBG-194. Wired authentication too

--- a/opba-consent-rest-api/src/main/resources/static/tpp_consent_api.yml
+++ b/opba-consent-rest-api/src/main/resources/static/tpp_consent_api.yml
@@ -102,6 +102,8 @@ paths:
       parameters:
         #path
         - $ref: '#/components/parameters/auth-id'
+        #query
+        - $ref: '#/components/parameters/redirectCode'
         #headers
         - $ref: '#/components/parameters/X-Request-ID'
         - $ref: '#/components/parameters/X-XSRF-TOKEN'
