--- a/fintech-examples/fintech-server/src/main/resources/application.yml
+++ b/fintech-examples/fintech-server/src/main/resources/application.yml
@@ -24,8 +24,9 @@ feign:
     follow-redirects: false
   client:
     config:
-      default:
+      tppAisClient:
         followRedirects: false
+        follow-redirects: false
 
 spring:
   datasource:
