--- a/opba-banking-protocol-facade/pom.xml
+++ b/opba-banking-protocol-facade/pom.xml
@@ -15,6 +15,7 @@
         <!-- Hard reference to root directory. Used to reference pmd and checkstyle files from root.
         Change this if depth changes. Current: /open-banking-gateway/opba-banking-protocol-facade -->
         <main.basedir>${project.parent.basedir}</main.basedir>
+        <tink.version>1.3.0-rc3</tink.version>
     </properties>
 
     <dependencies>
@@ -37,6 +38,12 @@
             <groupId>de.adorsys.opba</groupId>
             <artifactId>opba-db</artifactId>
             <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.crypto.tink</groupId>
+            <artifactId>tink</artifactId>
+            <version>${tink.version}</version>
         </dependency>
 
         <!-- Test dependencies -->
