--- a/fintech-examples/fintech-server/src/test/resources/application-withmock.yml
+++ b/fintech-examples/fintech-server/src/test/resources/application-withmock.yml
@@ -9,3 +9,8 @@ spring:
     username: SA
     password:
     driver-class-name: org.h2.Driver
+
+mock:
+  tppais:
+    listtransactions: true
+    listaccounts: true
