--- a/opba-banking-rest-api/src/main/resources/static/tpp_banking_api_ais.yml
+++ b/opba-banking-rest-api/src/main/resources/static/tpp_banking_api_ais.yml
@@ -42,8 +42,8 @@ paths:
       responses:
         '200':
           $ref: "#/components/responses/200_AccountList"
-        '303':
-          $ref: '#/components/responses/303_AUTHORIZATION_REDIRECT'
+        '202':
+          $ref: '#/components/responses/202_ACCOUNTS_TRANSACTIONS_ACCEPTED'
         '401':
           $ref: './tpp_banking_api_commons.yml#/components/responses/401_UNAUTHORIZED'
 
@@ -80,8 +80,8 @@ paths:
       responses:
         '200':
           $ref: "#/components/responses/200_AccountsTransactions"
-        '303':
-          $ref: '#/components/responses/303_AUTHORIZATION_REDIRECT'
+        '202':
+          $ref: '#/components/responses/202_ACCOUNTS_TRANSACTIONS_ACCEPTED'
         '401':
           $ref: './tpp_banking_api_commons.yml#/components/responses/401_UNAUTHORIZED'
 
@@ -220,6 +220,18 @@ components:
           schema:
             $ref: "#/components/schemas/transactionsResponse"
 
+    202_ACCOUNTS_TRANSACTIONS_ACCEPTED:
+      description: redirect
+      headers:
+        Location:
+          $ref: "./tpp_banking_api_commons.yml#/components/headers/Location"
+        X-Request-ID:
+          $ref: "./tpp_banking_api_commons.yml#/components/headers/X-Request-ID"
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/accepted_message"
+
     303_AUTHORIZATION_REDIRECT:
       description: |
         User authorisation session mandated. Agent shall redirect the user to the Authorisation URI provided in response.
@@ -240,6 +252,14 @@ components:
             $ref: "#/components/schemas/accountList"
 
   schemas:
+    accepted_message:
+      description: message for redirect
+      type: object
+      properties:
+        msg:
+          description: informative message
+          type: string
+
     accountDetails:
       description: |
         The ASPSP shall give at least one of the account reference identifiers:
