OBG 240 subtask 1 cookies

--- a/fintech-examples/fintech-server/src/main/resources/application.yml
+++ b/fintech-examples/fintech-server/src/main/resources/application.yml
@@ -6,6 +6,8 @@ server:
       maxAge: 300
       httpOnly: false
       path: /
+      sameSite: none
+      # sameSite: Strict|Lax|none
 tpp:
   url: http://localhost:8085
 
