--- a/opba-embedded-starter/src/main/resources/application.yml
+++ b/opba-embedded-starter/src/main/resources/application.yml
@@ -42,6 +42,9 @@ protocol:
 pkcs12:
   keyStore: sample-qwac.keystore
   password: password
+security:
+  provider:
+    name: BC
 
 flowable:
   process-definition-location-prefix: classpath*:/processes/**/
