OBG-220 fix tests

--- a/opba-banking-protocol-facade/src/test/resources/application-test.yml
+++ b/opba-banking-protocol-facade/src/test/resources/application-test.yml
@@ -4,3 +4,6 @@ spring:
     username: postgres
     password: docker
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
+security:
+  provider:
+    name: BC
