OBG-262. Demo UI and minor fixes

--- a/technical-embedded-ui/tpp-ui/angular.json
+++ b/technical-embedded-ui/tpp-ui/angular.json
@@ -21,7 +21,8 @@
             "aot": false,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/docs/rendered"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
