OBG-220 fix test for travis

--- a/opba-banking-protocol-facade/src/test/resources/application-test.yml
+++ b/opba-banking-protocol-facade/src/test/resources/application-test.yml
@@ -12,3 +12,7 @@ facade:
     saltLength: 8
     iterationCount: 1024
     keySetPath: example-keyset.json
+
+pkcs12:
+  keyStore: sample-qwac.keystore
+  password: password
