--- a/opba-banking-rest-impl/src/test/resources/application.yml
+++ b/opba-banking-rest-impl/src/test/resources/application.yml
@@ -22,3 +22,10 @@ spring:
 bank-search:
   start: 0
   max: 10
+facade:
+  encryption:
+    providerName: BC
+    algorithm: PBEWithSHA256And256BitAES-CBC-BC
+    saltLength: 8
+    iterationCount: 1024
+    keySetPath: example-keyset.json
