--- a/opba-db/pom.xml
+++ b/opba-db/pom.xml
@@ -22,6 +22,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>opba-facade-protocol-api-shared</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>de.adorsys.xs2a.adapter</groupId>
             <artifactId>adapters</artifactId>
             <version>${xs2a-adapter.version}</version>
