--- a/opba-protocols/sandboxes/xs2a-sandbox/src/main/resources/sandbox/application-test-db-local-postgres.yml
+++ b/opba-protocols/sandboxes/xs2a-sandbox/src/main/resources/sandbox/application-test-db-local-postgres.yml
@@ -4,8 +4,11 @@ common:
   # Database instance for sandbox applications, one should assume that username and password are same and are
   # equal to application profile without '-', ' ', etc.:
   db:
-    url: jdbc:postgresql://localhost:5432/sandbox_apps?currentSchema=${localapp.schema.name}
+    url: jdbc:postgresql://${db.host-and-port}/sandbox_apps?currentSchema=${localapp.schema.name}
     driver: org.postgresql.Driver
+
+db:
+  host-and-port: localhost:5432
 
 spring:
   profiles:
