--- a/how-to-start-with-project/technical-ui/docker-compose.yml
+++ b/how-to-start-with-project/technical-ui/docker-compose.yml
@@ -1,7 +1,25 @@
-version: "3.3"
+version: "3.4"
 
 networks:
   opba-net:
+
+x-sandbox-hosts: &sandbox-hosts
+  COMMON_APPS_LOCAL_ASPSPPROFILE_HOST: x2sa-sandbox-aspspprofile
+  COMMON_APPS_LOCAL_ASPSPPROFILE_PORT: 8080
+  COMMON_APPS_LOCAL_CERTGENERATOR_HOST: x2sa-sandbox-certgenerator
+  COMMON_APPS_LOCAL_CERTGENERATOR_PORT: 8092
+  COMMON_APPS_LOCAL_CONSENTMGMT_HOST: x2sa-sandbox-consentmgmt
+  COMMON_APPS_LOCAL_CONSENTMGMT_PORT: 8080
+  COMMON_APPS_LOCAL_LEDGERSAPP_HOST: x2sa-sandbox-ledgersapp
+  COMMON_APPS_LOCAL_LEDGERSAPP_PORT: 8088
+  COMMON_APPS_LOCAL_LEDGERSGATEWAY_HOST: x2sa-sandbox-ledgersgateway
+  COMMON_APPS_LOCAL_LEDGERSGATEWAY_PORT: 8089
+  COMMON_APPS_LOCAL_ONLINEBANKING_HOST: x2sa-sandbox-onlinebanking
+  COMMON_APPS_LOCAL_ONLINEBANKING_PORT: 8090
+  COMMON_APPS_LOCAL_TPPREST_HOST: x2sa-sandbox-tpprest
+  COMMON_APPS_LOCAL_TPPREST_PORT: 8093
+  COMMON_APPS_LOCAL_ONLINEBANKINGUI_HOST: x2sa-sandbox-onlinebankingui
+  COMMON_APPS_LOCAL_ONLINEBANKINGUI_PORT: 4400
 
 services:
   opba-postgres:
@@ -28,7 +46,7 @@ services:
       - SPRING_PROFILES_ACTIVE=${OPBA_PROFILES},technical-ui
       - GATEWAY_BASE_URL=http://opba-banking-gateway:8085
       - EMBEDDED_UI_BASE_URL=http://localhost:5500
-      - SPRING_LIQUIBASE_PARAMETERS_ADORSYS_SANDBOX_URL=http://x2sa-sandbox-ledgersgateway:20014
+      - SPRING_LIQUIBASE_PARAMETERS_ADORSYS_SANDBOX_URL=http://x2sa-sandbox-ledgersgateway:8089
     ports:
       - 18085:8085
     volumes:
@@ -88,11 +106,12 @@ services:
   x2sa-sandbox-tpprest:
     image: adorsys/xs2a-tpp-rest-server:2.1.2
     environment:
-      - SPRING_PROFILES_INCLUDE=test-db-local-postgres,test-common,test-tpp-rest
-      - SPRING_CONFIG_LOCATION=classpath:/,/configs/application-test-common.yml,/configs/application-test-db-local-postgres.yml,/configs/application-test-tpp-rest.yml
-      - DB_HOST_AND_PORT=xs2a-sandbox-postgres:5432
+      <<: *sandbox-hosts
+      SPRING_PROFILES_INCLUDE: test-db-local-postgres,test-common,test-tpp-rest
+      SPRING_CONFIG_LOCATION: classpath:/,/configs/application-test-common.yml,/configs/application-test-db-local-postgres.yml,/configs/application-test-tpp-rest.yml
+      DB_HOST_AND_PORT: xs2a-sandbox-postgres:5432
     ports:
-      - 20016:20016
+      - 20016:8093
     depends_on:
       - opba-banking-gateway
       - x2sa-sandbox-onlinebankingui
@@ -105,11 +124,12 @@ services:
   x2sa-sandbox-onlinebanking:
     image: adorsys/xs2a-online-banking:2.9
     environment:
-      - SPRING_PROFILES_INCLUDE=test-db-local-postgres,test-common,test-online-banking
-      - SPRING_CONFIG_LOCATION=classpath:/,/configs/application-test-common.yml,/configs/application-test-db-local-postgres.yml,/configs/application-test-online-banking.yml
-      - DB_HOST_AND_PORT=xs2a-sandbox-postgres:5432
+      <<: *sandbox-hosts
+      SPRING_PROFILES_INCLUDE: test-db-local-postgres,test-common,test-online-banking
+      SPRING_CONFIG_LOCATION: classpath:/,/configs/application-test-common.yml,/configs/application-test-db-local-postgres.yml,/configs/application-test-online-banking.yml
+      DB_HOST_AND_PORT: xs2a-sandbox-postgres:5432
     ports:
-      - 20015:20015
+      - 20015:8090
     depends_on:
       - xs2a-sandbox-postgres
       - x2sa-sandbox-ledgersapp
@@ -121,11 +141,12 @@ services:
   x2sa-sandbox-ledgersgateway:
     image: adorsys/xs2a-connector-examples:4.8
     environment:
-      - SPRING_PROFILES_INCLUDE=test-db-local-postgres,test-common,test-ledgeres-gateway,postgres,mock-qwac,remote
-      - SPRING_CONFIG_LOCATION=classpath:/,/configs/application-test-common.yml,/configs/application-test-db-local-postgres.yml,/configs/application-test-ledgers-gateway.yml
-      - DB_HOST_AND_PORT=xs2a-sandbox-postgres:5432
+      <<: *sandbox-hosts
+      SPRING_PROFILES_INCLUDE: test-db-local-postgres,test-common,test-ledgeres-gateway,postgres,mock-qwac,remote
+      SPRING_CONFIG_LOCATION: classpath:/,/configs/application-test-common.yml,/configs/application-test-db-local-postgres.yml,/configs/application-test-ledgers-gateway.yml
+      DB_HOST_AND_PORT: xs2a-sandbox-postgres:5432
     ports:
-      - 20014:20014
+      - 20014:8089
     depends_on:
       - x2sa-sandbox-onlinebankingui
       - x2sa-sandbox-ledgersapp
@@ -137,11 +158,12 @@ services:
   x2sa-sandbox-ledgersapp:
     image: adorsys/ledgers:2.5
     environment:
-      - SPRING_PROFILES_INCLUDE=test-db-local-postgres,test-common,test-ledgeres-app,develop,sandbox
-      - SPRING_CONFIG_LOCATION=classpath:/,/configs/application-test-common.yml,/configs/application-test-db-local-postgres.yml,/configs/application-test-ledgers-app.yml
-      - DB_HOST_AND_PORT=xs2a-sandbox-postgres:5432
+      <<: *sandbox-hosts
+      SPRING_PROFILES_INCLUDE: test-db-local-postgres,test-common,test-ledgeres-app,develop,sandbox
+      SPRING_CONFIG_LOCATION: classpath:/,/configs/application-test-common.yml,/configs/application-test-db-local-postgres.yml,/configs/application-test-ledgers-app.yml
+      DB_HOST_AND_PORT: xs2a-sandbox-postgres:5432
     ports:
-      - 20013:20013
+      - 20013:8088
     depends_on:
       - xs2a-sandbox-postgres
     volumes:
@@ -152,11 +174,12 @@ services:
   x2sa-sandbox-consentmgmt:
     image: adorsys/xs2a-consent-management:5.10
     environment:
-      - SPRING_PROFILES_INCLUDE=test-db-local-postgres,test-common,test-consent-mgmt
-      - SPRING_CONFIG_LOCATION=classpath:/,/configs/application-test-common.yml,/configs/application-test-db-local-postgres.yml,/configs/application-test-consent-mgmt.yml
-      - DB_HOST_AND_PORT=xs2a-sandbox-postgres:5432
+      <<: *sandbox-hosts
+      SPRING_PROFILES_INCLUDE: test-db-local-postgres,test-common,test-consent-mgmt
+      SPRING_CONFIG_LOCATION: classpath:/,/configs/application-test-common.yml,/configs/application-test-db-local-postgres.yml,/configs/application-test-consent-mgmt.yml
+      DB_HOST_AND_PORT: xs2a-sandbox-postgres:5432
     ports:
-      - 20012:20012
+      - 20012:8080
     depends_on:
       - xs2a-sandbox-postgres
     volumes:
@@ -167,11 +190,12 @@ services:
   x2sa-sandbox-certgenerator:
     image: adorsys/xs2a-certificate-generator:2.1
     environment:
-      - SPRING_PROFILES_INCLUDE=test-db-local-postgres,test-common,test-cert-generator
-      - SPRING_CONFIG_LOCATION=classpath:/,/configs/application-test-common.yml,/configs/application-test-db-local-postgres.yml,/configs/application-test-cert-generator.yml
-      - DB_HOST_AND_PORT=xs2a-sandbox-postgres:5432
+      <<: *sandbox-hosts
+      SPRING_PROFILES_INCLUDE: test-db-local-postgres,test-common,test-cert-generator
+      SPRING_CONFIG_LOCATION: classpath:/,/configs/application-test-common.yml,/configs/application-test-db-local-postgres.yml,/configs/application-test-cert-generator.yml
+      DB_HOST_AND_PORT: xs2a-sandbox-postgres:5432
     ports:
-      - 20011:20011
+      - 20011:8092
     depends_on:
       - xs2a-sandbox-postgres
     volumes:
@@ -182,12 +206,13 @@ services:
   x2sa-sandbox-aspspprofile:
     image: adorsys/xs2a-aspsp-profile:5.6
     environment:
-      - PRIMARY_PROFILE=/configs/application-test-aspsp-profile.yml
-      - SPRING_PROFILES_INCLUDE=test-db-local-postgres,test-common,test-aspsp-profile,debug_mode
-      - SPRING_CONFIG_LOCATION=classpath:/,/configs/application-test-common.yml,/configs/application-test-db-local-postgres.yml,/configs/application-test-aspsp-profile.yml
-      - DB_HOST_AND_PORT=xs2a-sandbox-postgres:5432
+      <<: *sandbox-hosts
+      PRIMARY_PROFILE: /configs/application-test-aspsp-profile.yml
+      SPRING_PROFILES_INCLUDE: test-db-local-postgres,test-common,test-aspsp-profile,debug_mode
+      SPRING_CONFIG_LOCATION: classpath:/,/configs/application-test-common.yml,/configs/application-test-db-local-postgres.yml,/configs/application-test-aspsp-profile.yml
+      DB_HOST_AND_PORT: xs2a-sandbox-postgres:5432
     ports:
-      - 20010:20010
+      - 20010:8080
     depends_on:
       - xs2a-sandbox-postgres
     volumes:
