--- a/how-to-start-with-project/technical-ui/docker-compose.yml
+++ b/how-to-start-with-project/technical-ui/docker-compose.yml
@@ -19,7 +19,7 @@ x-sandbox-hosts: &sandbox-hosts
   COMMON_APPS_LOCAL_TPPREST_HOST: x2sa-sandbox-tpprest
   COMMON_APPS_LOCAL_TPPREST_PORT: 8093
   COMMON_APPS_LOCAL_ONLINEBANKINGUI_HOST: x2sa-sandbox-onlinebankingui
-  COMMON_APPS_LOCAL_ONLINEBANKINGUI_PORT: 4400
+  COMMON_APPS_LOCAL_ONLINEBANKINGUI_PORT: 4400 # this port seem to be used in lot of places, hard to change
 
 services:
   opba-postgres:
@@ -59,7 +59,7 @@ services:
   opba-technical-ui:
     image: technical-tpp-ui
     environment:
-      TPP_BANKING_UI_HOST_AND_PORT: x2sa-sandbox-onlinebankingui:4400
+      TPP_BANKING_UI_HOST_AND_PORT: localhost:4400
       TECHNICAL_UI_HOST_AND_PORT: localhost:5500
       EMBEDDED_SERVER_URL: http://opba-banking-gateway:8085
     restart: on-failure
@@ -93,18 +93,18 @@ services:
       - opba-net
 
   x2sa-sandbox-onlinebankingui:
-    image: adorsys/xs2a-online-banking-ui:1.8
+    image: adorsys/xs2a-online-banking-ui:2.9
     environment:
-      ONLINE_BANKING_SERVER_URL: http://x2sa-sandbox-onlinebanking:20015
+      ONLINE_BANKING_SERVER_URL: http://x2sa-sandbox-onlinebanking:8090
     ports:
-      - 14400:4400
+      - 4400:4400
     depends_on:
       - x2sa-sandbox-onlinebanking
     networks:
       - opba-net
 
   x2sa-sandbox-tpprest:
-    image: adorsys/xs2a-tpp-rest-server:2.1.2
+    image: adorsys/xs2a-tpp-rest-server:2.9
     environment:
       <<: *sandbox-hosts
       SPRING_PROFILES_INCLUDE: test-db-local-postgres,test-common,test-tpp-rest
@@ -139,7 +139,7 @@ services:
       - opba-net
 
   x2sa-sandbox-ledgersgateway:
-    image: adorsys/xs2a-connector-examples:4.8
+    image: adorsys/xs2a-connector-examples:5.10
     environment:
       <<: *sandbox-hosts
       SPRING_PROFILES_INCLUDE: test-db-local-postgres,test-common,test-ledgeres-gateway,postgres,mock-qwac,remote
@@ -156,7 +156,7 @@ services:
       - opba-net
 
   x2sa-sandbox-ledgersapp:
-    image: adorsys/ledgers:2.5
+    image: adorsys/ledgers:2.8
     environment:
       <<: *sandbox-hosts
       SPRING_PROFILES_INCLUDE: test-db-local-postgres,test-common,test-ledgeres-app,develop,sandbox
@@ -188,7 +188,7 @@ services:
       - opba-net
 
   x2sa-sandbox-certgenerator:
-    image: adorsys/xs2a-certificate-generator:2.1
+    image: adorsys/xs2a-certificate-generator:2.9
     environment:
       <<: *sandbox-hosts
       SPRING_PROFILES_INCLUDE: test-db-local-postgres,test-common,test-cert-generator
@@ -204,7 +204,7 @@ services:
       - opba-net
 
   x2sa-sandbox-aspspprofile:
-    image: adorsys/xs2a-aspsp-profile:5.6
+    image: adorsys/xs2a-aspsp-profile:5.10
     environment:
       <<: *sandbox-hosts
       PRIMARY_PROFILE: /configs/application-test-aspsp-profile.yml
