OBG-267. Added terminal-based starter

--- a/opba-embedded-starter/pom.xml
+++ b/opba-embedded-starter/pom.xml
@@ -104,6 +104,7 @@
                 <configuration>
                     <mainClass>de.adorsys.opba.starter.OpenBankingEmbeddedApplication</mainClass>
                     <executable>true</executable>
+                    <skip>false</skip>
                 </configuration>
                 <executions>
                     <execution>
